# Strata-sync

./: .env.example  .gitignore  README.md  electron-builder.config.cjs  index.html  package-lock.json  package.json  pyproject.toml  start-dev.bat  vite.config.ts  vitest.config.ts
.megamemory/: knowledge.db-shm  knowledge.db-wal
backend/: config.py  main.py  requirements.txt
bot/: .env.example  SLACK_SETUP.md  TELEGRAM_SETUP.md  bot.py  requirements.txt  telegram_bot.py
docs/: bm25_scenario_test_100_20260326.md  confluence_jira_daily_sync_20260319.md  feature_proposals_20260319.md  graph3d_click_issue_analysis.md  improvement_plan_bot_rag.md  jira_ai_dispatch_plan.md  rag_data_diagnosis.md  rag_data_guide.md  search-algorithm.md  search_architecture_tradeoffs.md  search_failure_scenarios.md  search_pipeline_test_report_v4.md  search_user_scenarios.md  search_user_scenarios_v3.md  ssot_structural_audit.md  token_cost_estimate.md  개선사항1.md
electron/: launch.cjs  main.cjs  preload.cjs
manual/: Graph RAG 데이터 정제 매뉴얼 v3.22.docx  patch_v322.py
mcp/: mcp-config.json  package-lock.json  package.json  tsconfig.json
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
tools/: README.md  audit_and_fix.py  check_keyword_density.py  check_links.py  check_outdated.py  check_quality.py  confluence_write.py  convert_jira.py  crosslink_jira.py  docx_to_md.py  enhance_wikilinks.py  extract_images.py  fix_image_links.py  gen_index.py  gen_jira_index.py  gen_year_hubs.py  incremental_update.py  inject_keywords.py  jira_sprint_move.py  md_normalize.py  normalize_frontmatter.py  (+10 more)
(+290 files in other folders)
